tests/build/fail/enum.rs
use ref_destruct::*;

#[ref_destruct(MyEnumRef)]
enum MyEnum {
    A,
    B,
}

fn main() {}